Bug 156054 - kgpg crashes when trying to view the photo id
Summary: kgpg crashes when trying to view the photo id
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-17 23:37 UTC by Ritesh Raj Sarraf
Modified: 2008-01-17 23:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace (7.83 KB, text/plain)
2008-01-17 23:38 UTC, Ritesh Raj Sarraf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ritesh Raj Sarraf 2008-01-17 23:37:37 UTC
Version:            (using KDE 4.0.0)
Installed from:    Debian testing/unstable Packages
OS:                Linux

Whenever I try to view a photo ID for any of the keys, kgpg crashes.

I've attached the bug trace separately
Comment 1 Ritesh Raj Sarraf 2008-01-17 23:38:40 UTC
Created attachment 23107 [details]
backtrace
Comment 2 Rolf Eike Beer 2008-01-17 23:58:42 UTC
SVN commit 762827 by dakon:

Don't crash when user requests to show a photo

The code is probably not the most beauty one now but it at least works at 
expected.

BUG:156054


 M  +4 -2      keysmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=762827