Don't crash when user requests to show a photo

The code is probably not the most beauty one now but it at least works at 
expected.

BUG:156054

svn path=/branches/KDE/4.0/kdeutils/kgpg/; revision=762827